<resources>
    <!--Message d'erreurs-->

    <string name="email_or_password_empty">Merci de renseigner les champs de connexion</string>
    <string name="email_invalide">L\'email est invalide</string>
    <string name="user_not_found">L\'utilisateur n\'existe pas</string>
    <string name="field_missing">Merci de renseigner tous les champs</string>

    <!--Page de connexion-->

    <string name="app_name">Schedulo</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Connexion</string>
    <string name="register">S\'inscrire</string>
    <string name="user_account">Identifiant :</string>
    <string name="user_password">Mot de passe:</string>
    <string name="haveAnAccount">Vous n\'avez pas de compte ?</string>
    <string name="forgotPassword">Mot de passe oublié</string>

    <!--Page d'inscription-->
    <string name="inscription">Inscription</string>
    <string name="firstName">Prénom :</string>
    <string name="name">Nom :</string>
    <string name="status">Statut :</string>
    <string name="email">Adresse e-mail :</string>
    <string name="validate">Valider</string>
    <string name="cancel">Annuler</string>
    <string name="etudiant">Etudiant</string>
    <string name="teacher">Professeur</string>
    <string name="orSignIn">Ou inscrivez vous avec :</string>
    <string name="contract">En vous inscrivant vous acceptez nos conditions</string>

    <!--Page studenthomepage && teacherhomepage-->
    <string name="acceuil">Acceuil</string>
    <string name="period">Prochain cours : </string>
    <string name="finDesCours">Fin des cours :</string>
    <string name="profAbsent">professeur(s) absent(s)</string>
    <string name="profRetard">professeur(s) en retard</string>
    <string name="examenPrevu">examen(s) prévu(s)</string>
    <string name="devoirAttendu">devoir(s) attendu(s)</string>
    <string name="boutonConsulterNote">Notes</string>
    <string name="boutonConsulterEmploiDuTemps">Emploi du temps</string>
    <string name="boutonConsulterMatiere">Les matieres</string>
    <string name="boutonConsulterProfesseur">Les professeurs</string>
    <string name="boutonNotifierRetard">Notifier un retard</string>
    <string name="boutonNotifierAbsence">Notifier une absence</string>

    <!-- page notes-->
    <string name="boutonAccueil">Acceuil</string>
    <string name="consulterNote">Notes</string>

    <!--pages cours-->
    <string name="course">Cours</string>

    <!--page emploi du temps-->
    <string name="planning">Emploi du temps</string>
    <string name="selectdate">Select Date</string>

    <!--GCM-->
    <string name="registering_message">en retard</string>
    <string name="gcm_send_message">Absent</string>
    <string name="token_error_message">appareil non supporté</string>



    <string name="notification_retard">Notification</string>
    <string name="notification_title_retard">Schedulo Retard</string>
    <string name="notification_desc_retard">Je vais avoir du retard</string>

    <string name="notification_absence">Notification</string>
    <string name="notification_title_absence">Schedulo absence</string>
    <string name="notification_desc_absence">Je vais être absent</string>
</resources>
