<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/ic_launcher"
        android:layout_marginTop="30dp"
        />

    <custom_font.MyEditText
        android:text="@string/app_name"
        android:layout_width="300dp"
        android:layout_marginTop="100dp"
        android:textSize="40dp"
        android:textColorHint="#a9b0c3"
        android:background="#00000000"
        android:paddingLeft="80dp"
        android:paddingTop="45dp"
        android:layout_height="150dp"
        android:id="@+id/title" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_account"
        android:id="@+id/identifiant"
        android:textStyle="bold"
        android:textColor="#2C3646"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_password"
        android:textStyle="bold"
        android:textColor="#2C3646"
        android:id="@+id/password"
        android:layout_alignBaseline="@+id/password_input"
        android:layout_alignBottom="@+id/password_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/identifiant_input"
        android:layout_centerVertical="true"
        android:layout_marginTop="150dp"
        android:layout_alignRight="@+id/title"
        android:layout_alignEnd="@+id/title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_input"
        android:layout_toRightOf="@id/password"
        android:layout_below="@+id/identifiant_input"
        android:layout_alignRight="@+id/title"
        android:layout_alignEnd="@+id/title" />

    <custom_font.MyTextView
        android:id="@+id/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:background="@drawable/round"
        android:textColor="#CBD1DC"
        android:gravity="center"
        android:padding="14dp"
        android:layout_below="@+id/password_input"
        android:layout_marginTop="15dp"
        android:onClick="onClick"
        android:clickable="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/connect"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/fb"
            android:layout_marginRight="5dp"
            />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/google"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/twiter"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <custom_font.MyTextView
            android:id="@+id/create"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/haveAnAccount"
            android:textSize="13dp"
            android:textColor="#2C3646"
            android:onClick="onClick"
            android:clickable="true"
            />
        <custom_font.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPassword"
            android:textSize="13dp"
            android:textColor="#2C3646"
            android:onClick="onClick"
            android:clickable="true"

            />
    </LinearLayout>

</RelativeLayout>
